docs:Complete textbook\4.2implicit sequences.ipynb up to '4.2.7'

--- a/CS61A/textbook/4.2implicit sequences.ipynb
+++ b/CS61A/textbook/4.2implicit sequences.ipynb
@@ -278,9 +278,266 @@
    "execution_count": null,
    "id": "a3824e9a",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "try-except:\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#=====4.2.4 For===================\n",
+    "count = [1,2,3,4,5]\n",
+    "for item in count:\n",
+    "    print(item)\n",
+    "\n",
+    "# 用try-except语句和调用 对象count 的方法来实现for语句\n",
+    "print('try-except:')\n",
+    "items = count.__iter__() # for语句会先将in后面的表达式转换为迭代器\n",
+    "try:\n",
+    "    while True:  # 无限循环,直至出现预期错误\n",
+    "        item = items.__next__()\n",
+    "        print(item)\n",
+    "except StopIteration:\n",
+    "    pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc90aec7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "#========4.2.5 Generator生成器===============\n",
+    "def letter_generator():    # 生成器函数返回一个生成器(一种迭代器类型)\n",
+    "    current = 'a'\n",
+    "    while current <= 'd':\n",
+    "        yield current      # 每次对该生成器调用__next__()方法的时候都会从之前离开的地方运行直到yield语句执行为止\n",
+    "        current = chr(ord(current)+1)    # ord()返回字符对应的ASCII码,chr()返回ASCII码对应的字符\n",
+    "\n",
+    "for letter in letter_generator():  # 这里要带括号\n",
+    "    print(letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "474de457",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'generator'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "letters = letter_generator()\n",
+    "print(type(letters))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1365c109",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(letters.__next__())\n",
+    "print(letters.__next__())\n",
+    "print(letters.__next__())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5381bef1",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#=====4.2.4 For===================\n"
+    "#=====4.2.6 可迭代接口================\n",
+    "class Letters:\n",
+    "    def __init__(self,start='a',end='z'):\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "    def __iter__(self):\n",
+    "        return map(chr,range(ord(self.start),ord(self.end)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "196dd6f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b_to_k = Letters('b', 'k')    # b_to_k是一个可迭代对象,因为具有__iter__属性\n",
+    "first_iterator = b_to_k.__iter__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ed29f895",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n",
+      "c\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(first_iterator))\n",
+    "print(next(first_iterator))\n",
+    "print(next(first_iterator))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8aa15786",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n",
+      "e\n"
+     ]
+    }
+   ],
+   "source": [
+    "second_iterator = iter(b_to_k)\n",
+    "print(next(second_iterator))\n",
+    "print(next(first_iterator))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ca7307ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B\n",
+      "C\n"
+     ]
+    }
+   ],
+   "source": [
+    "caps = map(lambda x:x.upper(),b_to_k)\n",
+    "print(next(caps))\n",
+    "print(next(caps))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c4326f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 1), (1, 2), (1, 3), (2, 1), (2, 2), (2, 3), (3, 1), (3, 2), (3, 3)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#=======4.2.7使用 Yield 创建可迭代对象==============\n",
+    "def all_pairs(s):\n",
+    "    for item1 in s:\n",
+    "        for item2 in s:\n",
+    "            yield (item1,item2)\n",
+    "list(all_pairs([1,2,3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71249db0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 'a'), ('a', 'b'), ('a', 'c'), ('a', 'd'), ('b', 'a')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class LetterWithYield:\n",
+    "    def __init__(self,start='a',end='e'):\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "    def __iter__(self):\n",
+    "        next_letter = self.start\n",
+    "        while next_letter < self.end:\n",
+    "            yield next_letter\n",
+    "            next_letter = chr(ord(next_letter)+1)\n",
+    "\n",
+    "letters = LetterWithYield()  # letters是可迭代对象,具有__iter__属性,且返回生成器(迭代器的一种)\n",
+    "print(list(all_pairs(letters))[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc4c02de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#====4.2.8迭代器接口======================="
    ]
   }
  ],
