docs:Complete textbook\4.2implicit sequences.ipynb up to '4.2.8'

--- a/CS61A/textbook/4.2implicit sequences.ipynb
+++ b/CS61A/textbook/4.2implicit sequences.ipynb
@@ -532,12 +532,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bc4c02de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "#====4.2.8迭代器接口=======================\n",
+    "# 用类实现__next__()\n",
+    "class LetterIter:\n",
+    "    def __init__(self,start='a',end='e'):\n",
+    "        self.next_letter = start\n",
+    "        self.end = end\n",
+    "    def __next__(self):\n",
+    "        if self.next_letter == self.end:\n",
+    "            raise StopIteration\n",
+    "        letter = self.next_letter\n",
+    "        self.next_letter = chr(ord(letter)+1)\n",
+    "        return letter\n",
+    "\n",
+    "letter_iter = LetterIter()\n",
+    "print(letter_iter.__next__()) \n",
+    "print(letter_iter.__next__())\n",
+    "print(letter_iter.__next__())\n",
+    "print(letter_iter.__next__())   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1f41e92c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Positives:\n",
+    "    def __init__(self):\n",
+    "        self.next_positive = 1\n",
+    "    def __next__(self):\n",
+    "        result = self.next_positive\n",
+    "        self.next_positive += 1\n",
+    "        return result\n",
+    "\n",
+    "p = Positives()\n",
+    "print(p.__next__())\n",
+    "print(p.__next__())\n",
+    "print(p.__next__())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e707728e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#====4.2.8迭代器接口======================="
+    "#========4.2.10 Python流==============\n",
+    "# 这里又需要先回到2.9"
    ]
   }
  ],
